# ai4eo

./: .gitignore  LICENSE  README.md  function_app.py  pyproject.toml  requirements.txt  ruff.toml
